--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context=".MainActivity">
 
     <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/main_fragment"
         android:name="com.example.sirius.ui.MainFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
