--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -4,16 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="@dimen/normal_space">
+    android:background="@color/grayLight"
+    android:padding="@dimen/normal_space"
+    android:id="@+id/root_cont">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="@dimen/card_height"
+        android:layout_marginTop="@dimen/big_space"
         android:padding="@dimen/normal_space"
         app:cardCornerRadius="@dimen/card_corner_radius"
         app:cardElevation="@dimen/card_elevation"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -23,7 +25,7 @@
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_gravity="center"
-            android:visibility="visible"/>
+            android:visibility="visible" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/image"
@@ -31,6 +33,15 @@
             android:layout_height="@dimen/card_height"
             android:visibility="invisible"
             tools:src="@drawable/ic_launcher_foreground" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_margin="@dimen/normal_space"
+            android:src="@drawable/ic_info"
+            android:visibility="invisible" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/description"
@@ -40,6 +51,9 @@
             android:layout_gravity="bottom"
             android:layout_marginBottom="@dimen/normal_space"
             android:gravity="center"
+            android:shadowColor="@color/shadow"
+            android:shadowDy="3"
+            android:shadowRadius="6"
             tools:text="Это просто текст" />
 
     </com.google.android.material.card.MaterialCardView>
