--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="grayLight">#F1F1F1</color>
+    <color name="shadow">#54000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="primary">#00acc1</color>
     <color name="secondary">#00bcd4</color>
