--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <style name="Base.Appearance.Text" parent="TextAppearance.AppCompat" />
 
     <style name="Base.Appearance.Text.Description">
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:padding">2dp</item>
+    </style>
+
+    <style name="Base.Appearance.Text.Author">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/secondaryVariant</item>
+        <item name="android:padding">2dp</item>
+    </style>
+
+    <style name="AppBottomSheetDialogTheme" parent="Theme.Design.Light.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/AppModalStyle</item>
+    </style>
+
+    <style name="AppModalStyle" parent="Widget.Design.BottomSheet.Modal">
+        <item name="android:background">@drawable/rounded</item>
     </style>
 
 </resources>
