--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,13 +5,13 @@
 
     <style name="Base.Appearance.Text.Description">
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="android:padding">2dp</item>
+        <item name="android:textColor">@color/secondaryText</item>
+        <item name="android:padding">@dimen/small_space</item>
     </style>
 
     <style name="Base.Appearance.Text.Author">
         <item name="android:textSize">18sp</item>
-        <item name="android:textColor">@color/secondaryVariant</item>
+        <item name="android:textColor">@color/primaryText</item>
         <item name="android:padding">2dp</item>
     </style>
 
@@ -20,7 +20,7 @@
     </style>
 
     <style name="AppModalStyle" parent="Widget.Design.BottomSheet.Modal">
-        <item name="android:background">@drawable/rounded</item>
+        <item name="android:background">@drawable/bkg_rounded</item>
     </style>
 
 </resources>
