--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="grayLight">#F1F1F1</color>
     <color name="shadow">#54000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="primary">#673AB7</color>
+    <color name="primary">#6E47B5</color>
     <color name="darkPrimary">#512DA8</color>
     <color name="primaryText">#212121</color>
     <color name="secondaryText">#757575</color>
