--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,9 +4,10 @@
     <color name="grayLight">#F1F1F1</color>
     <color name="shadow">#54000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="primary">#6E47B5</color>
-    <color name="darkPrimary">#512DA8</color>
+    <color name="primary">#80cbc4</color>
+    <color name="primaryLight">#b2fef7</color>
+    <color name="secondary">#4f9a94</color>
+    <color name="primaryDark">#4f9a94</color>
     <color name="primaryText">#212121</color>
     <color name="secondaryText">#757575</color>
-    <color name="accent">#607D8B</color>
 </resources>
