--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,15 +28,15 @@
         <item name="android:layout_width">@dimen/circle_button_size</item>
         <item name="android:layout_height">@dimen/circle_button_size</item>
         <item name="android:layout_margin">@dimen/normal_space</item>
-        <item name="android:backgroundTint">@color/white</item>
+        <item name="android:backgroundTint">@color/primaryDark</item>
         <item name="cornerRadius">@dimen/circle_button_radius</item>
-        <item name="iconTint">@color/accent</item>
+        <item name="iconTint">@color/white</item>
     </style>
 
     <style name="Base.CircleButton.Small">
         <item name="android:layout_width">@dimen/circle_button_size_small</item>
         <item name="android:layout_height">@dimen/circle_button_size_small</item>
-        <item name="android:backgroundTint">@color/white</item>
+        <item name="android:backgroundTint">@color/primaryDark</item>
         <item name="android:insetLeft">0dp</item>
         <item name="android:insetTop">0dp</item>
         <item name="android:insetRight">0dp</item>
@@ -44,12 +44,8 @@
         <item name="iconPadding">0dp</item>
         <item name="iconGravity">textStart</item>
         <item name="cornerRadius">@dimen/circle_button_radius</item>
-        <item name="iconTint">@color/accent</item>
+        <item name="iconTint">@color/white</item>
+        <item name="iconSize">@dimen/icon_size</item>
     </style>
-
-    android:insetLeft="0dp"
-    android:insetTop="0dp"
-    android:insetRight="0dp"
-    android:insetBottom="0dp"
 
 </resources>
