--- a/app/src/main/res/layout/fragment_latest.xml
+++ b/app/src/main/res/layout/fragment_latest.xml
@@ -15,6 +15,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/errorHolder"
+        style="@style/Base.Appearance.Text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/big_space"
+        android:elevation="6dp"
+        android:gravity="center"
+        android:text="@string/default_msg_error"
+        android:textSize="16sp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@id/cardHelper"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <View
         android:id="@+id/separator"
         android:layout_width="match_parent"
