Рандомная карточка с моушеном.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,17 +8,7 @@
     android:background="@drawable/bkg_main"
     android:clipChildren="false"
     android:padding="@dimen/normal_space"
-    app:motionDebug="SHOW_ALL"
     app:layoutDescription="@xml/main_scene">
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/previousPost"
-        style="@style/Base.CircleButton.Big"
-        android:elevation="6dp"
-        app:icon="@drawable/arrow_back"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <FrameLayout
         android:id="@+id/bottomCard"
@@ -29,7 +19,7 @@
             android:id="@+id/bottomHolder"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/bkg_rounded"
+            android:background="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -39,9 +29,10 @@
             style="@style/Base.Appearance.Text.Author"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center|bottom"
             android:layout_gravity="bottom"
-            android:paddingTop="@dimen/big_space"
+            android:background="@color/grayLight"
+            android:gravity="center|bottom"
+            android:padding="@dimen/small_space"
             android:textStyle="bold"
             tools:text="Haneewow" />
     </FrameLayout>
@@ -51,23 +42,35 @@
         android:layout_width="0dp"
         android:layout_height="0dp">
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/imageHolder"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/bkg_rounded"
-            app:layout_constraintEnd_toEndOf="parent"
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/previousPost"
+            style="@style/Base.CircleButton.Small"
+            android:layout_gravity="bottom|start"
+            android:layout_marginHorizontal="@dimen/small_space"
+            android:layout_marginVertical="2dp"
+            android:elevation="6dp"
+            android:padding="4dp"
+            android:visibility="invisible"
+            app:icon="@drawable/arrow_back"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/imageHolder"
+            android:background="@color/white"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/authorName"
             style="@style/Base.Appearance.Text.Author"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center|bottom"
             android:layout_gravity="bottom"
-            android:paddingTop="@dimen/big_space"
+            android:background="@color/grayLight"
+            android:gravity="center|bottom"
+            android:padding="@dimen/small_space"
             android:textStyle="bold"
             tools:text="Haneewow" />
     </FrameLayout>
