--- a/app/src/main/res/xml/main_scene.xml
+++ b/app/src/main/res/xml/main_scene.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <Transition
-        app:constraintSetEnd="@+id/like"
+        app:constraintSetEnd="@+id/next"
         app:constraintSetStart="@+id/rest"
         app:duration="300">
 
@@ -43,8 +43,8 @@
 
     <Transition
         app:autoTransition="animateToEnd"
-        app:constraintSetEnd="@+id/offScreenLike"
-        app:constraintSetStart="@+id/like"
+        app:constraintSetEnd="@+id/offScreenNext"
+        app:constraintSetStart="@+id/next"
         app:duration="150">
 
     </Transition>
@@ -82,7 +82,7 @@
     </ConstraintSet>
 
     <ConstraintSet
-        android:id="@+id/like"
+        android:id="@+id/next"
         app:deriveConstraintsFrom="@id/rest">
 
         <Constraint
@@ -108,8 +108,8 @@
     </ConstraintSet>
 
     <ConstraintSet
-        android:id="@+id/offScreenLike"
-        app:deriveConstraintsFrom="@id/like">
+        android:id="@+id/offScreenNext"
+        app:deriveConstraintsFrom="@id/next">
 
         <Constraint
             android:id="@id/topCard"
